# cpp-graphics-showcase

./: .gitignore  CMakeLists.txt  LICENSE  OsgViewer.sln  OsgViewer.vcxproj  README.md  main.cpp
OSG/cmake/: OpenThreads-targets-release.cmake  OpenThreads-targets.cmake  osg-targets-release.cmake  osg-targets.cmake  osgAnimation-targets-release.cmake  osgAnimation-targets.cmake  osgDB-targets-release.cmake  osgDB-targets.cmake  osgFX-targets-release.cmake  osgFX-targets.cmake  osgGA-targets-release.cmake  osgGA-targets.cmake  osgManipulator-targets-release.cmake  osgManipulator-targets.cmake  osgParticle-targets-release.cmake  osgParticle-targets.cmake  osgPresentation-targets-release.cmake  osgPresentation-targets.cmake  osgShadow-targets-release.cmake  osgShadow-targets.cmake  osgSim-targets-release.cmake  osgSim-targets.cmake  osgTerrain-targets-release.cmake  osgTerrain-targets.cmake  osgText-targets-release.cmake  osgText-targets.cmake  osgUI-targets-release.cmake  osgUI-targets.cmake  osgUtil-targets-release.cmake  osgUtil-targets.cmake  osgViewer-targets-release.cmake  osgViewer-targets.cmake  osgVolume-targets-release.cmake  osgVolume-targets.cmake  osgWidget-targets-release.cmake  osgWidget-targets.cmake
OSG/lib/: OpenThreadsd.exp  osgAnimationd.exp  osgDBd.exp  osgFXd.exp  osgGAd.exp  osgManipulatord.exp  osgParticled.exp  osgPresentationd.exp  osgShadowd.exp  osgSimd.exp  osgTerraind.exp  osgTextd.exp  osgUId.exp  osgUtild.exp  osgViewerd.exp  osgVolumed.exp  osgWidgetd.exp  osgd.exp
OSG/lib/osgPlugins-3.7.0/: osgdb_gdald.exp  osgdb_ogrd.exp
OSG/lib/pkgconfig/: openscenegraph-osg.pc  openscenegraph-osgAnimation.pc  openscenegraph-osgDB.pc  openscenegraph-osgFX.pc  openscenegraph-osgGA.pc  openscenegraph-osgManipulator.pc  openscenegraph-osgParticle.pc  openscenegraph-osgPresentation.pc  openscenegraph-osgQt.pc  openscenegraph-osgShadow.pc  openscenegraph-osgSim.pc  openscenegraph-osgTerrain.pc  openscenegraph-osgText.pc  openscenegraph-osgUI.pc  openscenegraph-osgUtil.pc  openscenegraph-osgViewer.pc  openscenegraph-osgVolume.pc  openscenegraph-osgWidget.pc  openthreads.pc
shaders/: instance.frag  instance.vert
src/: BVHPicker.h  GeometryChunker.cpp  GeometryChunker.h  HardwareInstancing.cpp  HardwareInstancing.h  NaiveScene.cpp  NaiveScene.h  SystemMonitor.h  main.cpp
